# rpimotioncontroller

./: CMakeLists.txt  README.md
buildroot-config/: .config
c++/protobuf/: motioncontroller.grpc.pb.cc  motioncontroller.grpc.pb.h  motioncontroller.pb.cc  motioncontroller.pb.h  motioncontroller.pri
c++/rpimotioncontroller/: drivercontext.cpp  drivercontext.h  main.cpp  rpimotioncontroller.pro
c++/rpimotioncontroller/drivers/: ads1256.cpp  ads1256.h  c_gpio.h  c_spi.c  c_spi.h  config.cpp  config.h  dac8532.cpp  dac8532.h  drivers.pri  spidriver.cpp  spidriver.h
cpp/: CMakeLists.txt
cpp/rpimotioncontroller/: main.cpp
cpp/rpimotioncontroller/drivers/: ads1256.cpp  ads1256.h  config.cpp  config.h  dac8532.cpp  dac8532.h  gpiodriver.cpp  gpiodriver.h  spidriver.cpp  spidriver.h
proto/: CMakeLists.txt  generate_grpc.cmake  motioncontroller.proto
protos/: motioncontroller.proto  motioncontroller_pb2.py  motioncontroller_pb2_grpc.py
python/: ADS1256.py  DAC8532.py  main.py  motioncontroller_pb2.py  motioncontroller_pb2_grpc.py  readme.txt
yocto-config/: README.md  bblayers.conf  core-mustafa-sdk-image.bb  local.conf
